--- a/pinterest-main/styles.css
+++ b/pinterest-main/styles.css
@@ -228,6 +228,20 @@
 .card.flex-row .card-image {
   padding: 20px;
 }
+
+.custom-card-1 .card-body h3,
+.custom-card-1 .card-body p {
+  color: #212529;
+}
+
+.custom-card {
+  background-color: #212529;
+}
+
+.card-body h3,
+.card-body p {
+  color: #ffffff;
+}
 /* section 2 end */
 
 /* Section 3 */
@@ -373,22 +387,28 @@ body.dark-mode {
   color: #e0e0e0;
 }
 
-/* Dark mode section1 */
+/* Dark mode navbar */
+body.dark-mode .navbar {
+  background-color: #1c1c1c;
+}
+
+body.dark-mode .navbar-brand,
+body.dark-mode .nav-link {
+  color: #e0e0e0;
+}
+
+body.dark-mode .navbar-brand:hover,
+body.dark-mode .nav-link:hover {
+  color: #ffffff;
+}
+
+body.dark-mode .nav-link.active {
+  color: #e0e0e0;
+}
+
 body.dark-mode .navbar-light {
   background-color: #343a40;
   color: #e0e0e0;
-}
-
-body.dark-mode .navbar-light .navbar-nav .nav-link {
-  color: #e0e0e0;
-}
-
-body.dark-mode .navbar-light .navbar-nav .nav-link:hover {
-  color: #ffffff;
-}
-
-body.dark-mode .navbar-light .navbar-nav  .nav-link.active {
-  color: #ffffff;
 }
 
 body.dark-mode .login-button {
@@ -411,6 +431,7 @@ body.dark-mode .dark-button:hover {
   color: #ffffff;
 }
 
+/* Dark mode section 1 */
 body.dark-mode .hero-section {
   background-color: #1e1e1e;
   color: #e0e0e0;
@@ -438,6 +459,28 @@ body.dark-mode .cta-btn-1:hover {
 }
 /* Dark mode section 1 end */
 
+
+/* Section 2 */
+/* body.dark-mode .subjudul {
+  background-color: greenyellow;
+} */
+
+body.dark-mode .subjudul h2 {
+  color: #1E1E1E;
+}
+body.dark-mode .subjudul p {
+  color: #ffffff;
+}
+
+body.dark-mode .cc-card .custom-card {
+  background-color: #F8F9FA;
+}
+
+body.dark-mode .custom-card .card-body h3,
+body.dark-mode .custom-card .card-body p {
+  color: #212529;
+}
+/* Section 2 end */
 
 body.dark-mode .cta-btn-3 {
   background-color: #ffffff;
@@ -480,7 +523,6 @@ body.dark-mode .card.bg-dark .cta-btn {
   color: #343a40;
 }
 
-
 body.dark-mode .bg-light {
   background-color: #343a40 !important;
   color: #e0e0e0;
@@ -514,24 +556,12 @@ body.dark-mode * {
 
 @media (min-width: 991px) {
   .nav-link::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 2px;
-    border-radius: 50px;
-    background-color: #ffffff;
-    visibility: hidden;
-    transition: 0.3s ease-in-out;
+    background-color: #e0e0e0;
   }
 
   .nav-link:hover::after,
   .nav-link.active::after {
-    width: 100%;
-    visibility: visible;
-    color: #ffffff;
+    color: #e0e0e0;
   }
 
   body.dark-mode .nav-link::after {
